Implementation of auditor, review extends Auditable entity, this allows auto genenerate created at field and etc. for reviews.